--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "extract-text-webpack-plugin": "3.0.0",
     "firebase": "9.6.6",
     "moment": "2.18.1",
+    "node": "14.20.0",
     "node-sass": "^8.0.0",
     "normalize.css": "7.0.0",
     "numeral": "2.0.6",
