--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "start": "node server/server.js",
     "heroku-postbuild": "yarn run build:prod"
   },
+  "engines": {
+    "node": ">14.20.0"
+  },
   "dependencies": {
     "babel-cli": "6.24.1",
     "babel-core": "6.25.0",
@@ -25,7 +28,6 @@
     "extract-text-webpack-plugin": "3.0.0",
     "firebase": "9.6.6",
     "moment": "2.18.1",
-    "node": "14.20.0",
     "node-sass": "^8.0.0",
     "normalize.css": "7.0.0",
     "numeral": "2.0.6",
