--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
+    "build:prod2": "webpack --env production",
     "dev-server": "webpack-dev-server",
     "test": "cross-env NODE_ENV=test jest --config=jest.config.json",
     "start": "node server/server.js",
@@ -26,7 +27,7 @@
     "css-loader": "0.28.4",
     "express": "^4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
-    "firebase": "9.6.6",
+    "firebase": "9.7.0",
     "moment": "2.18.1",
     "node-sass": "^8.0.0",
     "normalize.css": "7.0.0",
@@ -56,6 +57,7 @@
     "enzyme-to-json": "3.0.1",
     "jest": "20.0.4",
     "react-test-renderer": "16.0.0",
+    "terser-webpack-plugin": "^5.3.6",
     "webpack-dev-server": "2.5.1"
   }
 }
