--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-cli": "6.24.1",
     "babel-core": "6.25.0",
     "babel-loader": "7.1.1",
+    "babel-minify-webpack-plugin": "^0.3.1",
     "babel-plugin-transform-class-properties": "6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "1.5.2",
@@ -28,6 +29,7 @@
     "express": "^4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
     "firebase": "9.7.0",
+    "history": "4.7.2",
     "moment": "2.18.1",
     "node-sass": "^8.0.0",
     "normalize.css": "7.0.0",
